--- a/Basic/grid.html
+++ b/Basic/grid.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     
-    <title>Bootstrap Grid System</title>
-    
+    <title>Bootstrap Grid System</title> 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap.css" />
     <script src="bootstrap.js"></script>
 
@@ -11,7 +10,7 @@
 <body>
 
 <!-- ======================== -->
-<!-- OBJECTIVES          -->   
+<!-- OBJECTIVES             = -->   
 <!-- 1. uNDERSTAND pURPOSE OF gRID sYSTEM --> 
 <!-- 2. Understand the 4 different sizes -->
 <!-- 3. Write Nested grids -->
