--- a/Basic/grid.html
+++ b/Basic/grid.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    
-    <title>Bootstrap Grid System</title> 
-    <link rel="stylesheet" type="text/css" media="screen" href="bootstrap.css" />
+
+    <title>Bootstrap Grid System</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="bootstrap.css">
     <script src="bootstrap.js"></script>
+    <style type="text/css">
+        .pink {
+            background: pink;
+            border: 1px solid purple;
+        }
+
+        .orange {
+            background: orange;
+            border: 1 px dashed red;
+            height: 50px;
+        }
+    </style>
 
 </head>
+
 <body>
 
-<!-- ======================== -->
-<!-- OBJECTIVES             = -->   
-<!-- 1. uNDERSTAND pURPOSE OF gRID sYSTEM --> 
-<!-- 2. Understand the 4 different sizes -->
-<!-- 3. Write Nested grids -->
-<!-- ======================== -->
+    <!-- ======================== -->
+    <!-- OBJECTIVES             = -->
+    <!-- 1. uNDERSTAND pURPOSE OF gRID sYSTEM -->
+    <!-- 2. Understand the 4 different sizes -->
+    <!-- 3. Write Nested grids -->
+    <!-- ======================== -->
+
+    <div class="container">
+        <!--
+            <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        <div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+        -->
+        <div class="row">
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-lg-6 orange">First Half</div>
+                    <div class="col-lg-6 orange">Other Half</div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 pink">Tour Date!</div>
+            <div class="col-md-3 col-sm-6 pink">Tour Date!</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                    <div class="col-lg-2 orange"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
 </body>
+
 </html>
