--- a/Basic/Basic.html
+++ b/Basic/Basic.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1>This is a jumbotron</h1>
-      <p>percobaan sekian</p>
+      <p>percobaan sekian kali</p>
       <button class="btn btn-success btn-lg">Hi, there</button>
 
     </div>
